--- a/front/src/components/css/header.css
+++ b/front/src/components/css/header.css
@@ -1,56 +1,35 @@
-.header {
-    overflow: hidden;
+#container {
     background-color: #282c34;
-    padding: 20px 10px;
+    width: 100%;
     text-align: center;
+    min-height: 5%;
 }
 
-.header a {
-    color: white;
-    padding: 12px;
-    text-decoration: none;
+#title {
     font-size: 18px;
-    line-height: 25px;
-}
-
-.header a.logo {
-    font-size: 48px;
     font-weight: bold;
-    margin-left: 250px;
+    color: white;
+    text-decoration: none;
 }
 
-.header-right {
-    float: right;
-    margin-top: -15px;
+#header-right{
+    position: absolute;
+    right: 1%;
+    top: 0;
+    align-content: center;
+    max-width: 30%;
+    display: inline-block;
+    vertical-align:middle;
 }
 
-.header-right input.search {
-    background-image: url("/circle.png");
-    height: 36px;
-    width: 150px;
-    border-radius: 25px;
-    padding-left: 40px;
-    background-repeat: no-repeat;
-    font-size: 20px;
+.right-item {
+    display: inline-table;
+    vertical-align:middle;
+    margin-bottom: 0;
 }
 
-.filter {
-    margin-bottom: 50px;
-}
 
-@media screen and (max-width: 750px) {
 
-    .header a.logo {
-        margin-left: 0;
-    }
 
-    .header a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
 
-    .header-right {
-        float: none;
-    }
-}
+
