--- a/front/src/components/css/header.css
+++ b/front/src/components/css/header.css
@@ -1,5 +1,5 @@
 #header-container {
-    background-color: black;
+    background-color: #212121;
     width: 100%;
     text-align: center;
     min-height: 5%;
