--- a/front/src/components/elements/css/quizzcard.css
+++ b/front/src/components/elements/css/quizzcard.css
@@ -1,23 +1,26 @@
 #card-container {
     background-color: white;
-    border-radius:3px;
+    border-radius:4px;
     color: black;
+    
 }
 
 #card-container>img{
-    margin-bottom: 0;
-    height: inherit;
-    width: 25%;
     border-bottom-left-radius: inherit;
     border-top-left-radius: inherit;
+    height: inherit;
+    width:30%;
 }
 
 .card-item {
-    display: inline-table;
+    display: inline-block;
     margin-right: 1%;
 }
 
 #card-text {
-    position: absolute;
-    top:0;
+    
+}
+
+#quizz-title {
+    font-size: x-large;
 }
