--- a/front/src/components/css/home.css
+++ b/front/src/components/css/home.css
@@ -1,8 +1,10 @@
 .tq_tag>h1 {
     margin-top: 3%;
     margin-bottom: -2%;
+    margin-left: 1%;
 }
 
 .card_quizz {
     margin-top: 3%;
+    margin-left: 2%;
 }
