--- a/front/src/components/css/editQuizz.css
+++ b/front/src/components/css/editQuizz.css
@@ -13,3 +13,7 @@
 #edit-quizz-container div input:default{
     background-color: aqua;
 }
+
+#edit-quizz-container .btn{
+    margin-left: -30px;
+}
