--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url('./components/css/materialize.css');
 
 html {
     background-color: #3D3D3E;
