--- a/front/src/components/css/addQuizz.css
+++ b/front/src/components/css/addQuizz.css
@@ -1,16 +1,13 @@
-#edit-quizz-container h3 {
+
+#add-quizz-container div {
     text-align: center;
 }
 
-#edit-quizz-container div {
-    text-align: center;
-}
-
-#edit-quizz-container div input {
+#add-quizz-container div input {
     margin-top: 10px;
 }
 
-#edit-quizz-container .btn{
+#add-quizz-container .btn{
     margin-left: -30px;
 }
 
