--- a/front/src/components/css/profile.css
+++ b/front/src/components/css/profile.css
@@ -1,3 +1,7 @@
+#profile-container{
+    height: 100%;
+}
+
 /** USER INFO (TOP)**/
 
 #user-info {
@@ -15,8 +19,24 @@
     margin-left: 2%;
 }
 
+@keyframes mymove {
+    from {left: -60px;
+          opacity: 0;
+         }
+    to {left: 0px;
+        opacity:1;
+       }
+
+  }
+
 #user-quizzes li {
     margin-top: 12%;
+}
+
+.card{
+    position: relative;
+    animation: mymove 0.9s;
+    animation-timing-function: ease-in-out;
 }
 
 #user-quizzes #menu-quizz h3{
