--- a/front/src/components/css/addQuizz.css
+++ b/front/src/components/css/addQuizz.css
@@ -28,3 +28,16 @@ textarea {
     font-size: 12px;
     margin-top: -12px;
 }
+
+.input-field.inline input, .input-field.inline .select-dropdown {
+    margin-bottom: 0;
+    color: white;
+}
+
+.chip{
+    font-size: 18px;
+}
+
+#div-tags {
+    color: white;
+}
