--- a/front/src/components/css/home.css
+++ b/front/src/components/css/home.css
@@ -1,10 +1,31 @@
-.tq_tag>h1 {
-    margin-top: 3%;
-    margin-bottom: -2%;
+#container {
+    position: relative;
+}
+
+.tq_tag{
+    position: flex;
+    width: 100%;
+    min-height: 300px;
+}
+.cards{
+    width: 100%;
+    position: relative;
+}
+.card_quizz{
+    display: inline-block;
+}
+
+.tq_tag>h1{
+    position: absolute;
+    left: 1%;
+    margin:0;
+    margin-top: 2%;
+}
+.cards li {
+    float: left;
+    min-width: 100px;
+    margin-top: 5%;
     margin-left: 1%;
 }
 
-.card_quizz {
-    margin-top: 3%;
-    margin-left: 2%;
-}
+/* aucune idée de pourquoi ca marche lol */
