Suppression de PlayQuestions.js pour l'inclure dans Play.js

--- a/front/src/components/css/play.css
+++ b/front/src/components/css/play.css
@@ -14,6 +14,12 @@
     right: 5%;
 }
 
+#chrono{
+    position: absolute;
+    top: 40px;
+    left: 5%;
+    font-size: 2em;
+}
 
 #score>h2{
     font-size: 2em;
